# ahacap26

./: .cursorrules  .dockerignore  .env.example  .gitignore  .prettierrc  Dockerfile  SECURITY.md  b64.txt  b64_final.txt  clean_ge_svgs.py  debug_logs.txt  deploy_hotfix.ps1  deploy_prod.py  deployment_walkthrough.md  docker-compose.yml  error_logs.txt  full_debug_logs.txt  full_logs.txt  handoff.md  index.html  integration_test.py  logo_b64.txt  logs.txt  package.json  pnpm-lock.yaml  project_state.md  verify-build.ps1
.github/workflows/: cms-sync.yml
apps/api/: .env  Dockerfile  cache.py  check_endpoints.py  check_routes.py  database.py  dependencies.py  fix_db_schema.py  inventory.csv  main.py  middleware.py  migrate_email.py  migrate_level2.py  migrate_puck.py  migrate_snippets.py  migrate_v2.py  models.py  pyproject.toml  requirements.txt  run_dev.ps1  schemas.py  seed_products.py
apps/api/domain/: cart.py  catalog.py  discounts.py  orders.py  payments.py
apps/api/routers/: catalog.py  content.py  payments.py  snippets.py
apps/api/services/: email.py  pdf.py
apps/api/tests/: test_domain.py
apps/web/: .dockerignore  .eslintrc.json  Dockerfile  content.json  lint_log.txt  next.config.js  package-lock.json  package.json  puck.config.tsx  sentry.client.config.ts  sentry.edge.config.ts  tailwind.config.ts  ts_errors.txt  tsc_errors_gallery.txt  tsc_full.txt  tsc_output.txt  tsconfig.tsbuildinfo  types.ts
apps/web/.next/: trace  (+6 more)
docs/: API.md  payment_flow.mermaid
docs/adr/: 001-extract-domain-logic.md
scripts/: test_order.py  verify_endpoints.py
(+335 files in other folders)
